src/snapshots/afrotd__parser__tests__interpreation_html_3.4.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 7 von der A-25. Team A liegt zu einem späten Zeitpunkt in
            der zweiten Spielperiode punktemäßig in Führung. Als der Ballträger
            A22 im Spielfeld getackelt wird, steht die Game Clock auf 1:47. Der
            Umpire meldet dem Referee, dass er eine Flagge für ein Festhalten
            durch den Snapper A55 geworfen hat. Bei dem Down erzielte A22 (a)
            drei Meter oder (b) neun Meter Raumgewinn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Nach der Strafdurchführung startet die Game Clock in beiden
                Fällen (a) und (b) je nach Wahl durch Team B entweder mit dem
                Snap oder mit der Ballfreigabe durch den Referee.
            </p>
        </details>
    </div>
</article>
