src/snapshots/afrotd__parser__tests__interpreation_html_3.4.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 10 von der B-30. Während der zweiten Halbzeit läuft die Game
            Clock. Team A liegt mit zwei Punkten zurück und hat keine Timeouts
            mehr. Beim Snap befinden sich fünf Team A-Spieler im Backfield. A22
            advanct zu einem Raumgewinn von drei Metern bis zu der B-27. Als
            der Ball für dead erklärt wird, bleibt die Game Clock bei (a) 13
            Sekunden oder (b) 8 Sekunden stehen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) und (b) 5-Meterstrafe, illegale Formation. 2. und 15 von
                der B-35. Da die illegale Formation ein Foul ist, durch das die
                Game Clock nicht sofort angehalten wird, trifft der
                10-Sekunden-Abzug nicht zu. Nach der Strafdurchführung startet
                die Game Clock beim Signal des Referees.
            </p>
        </details>
    </div>
</article>
