src/snapshots/afrotd__parser__tests__interpreation_html_3.4.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Vierte Spielperiode bei laufender Game Clock. 2. und 5 von der
            B-20. Tackle B77 ist beim Snap in der neutralen Zone, ohne einen
            Gegner zu berühren. QB A12 läuft nach außen, um einen Pass zu
            werfen. Er läuft bis zu der B-17 und wirft einen Vorwärtspass, der
            unvollständig ist. Die Game Clock bleibt bei 0:15 stehen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler Vorwärtspass Team A und Offside Team B. Die Fouls
                heben sich auf. Kein 10-Sekunden-Abzug. 2. und 5 von der B-20.
                Die Game Clock verbleibt bei 0:15 und startet mit dem Snap.
            </p>
        </details>
    </div>
</article>
