src/snapshots/afrotd__parser__tests__interpreation_html_3.5.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein oder mehrere Spieler, zusätzlich zu den elf seines Teams, ist
            (sind) offensichtlich ausgewechselt und will (wollen) das Spiel
            verlassen. Er hat (sie haben) eine Seitenauslinie noch nicht
            erreicht, als der Ball ins Spiel gebracht wird. Er (sie)
            behinder(n)t weder das Spiel noch die Spieler.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 5 Meter vom Previous Spot (Regeln 7.1.3 Strafe und
                7.1.4 Strafe).
            </p>
        </details>
    </div>
</article>
