src/snapshots/afrotd__parser__tests__interpreation_html_3.5.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem Team Ballbesitzwechsel oder einem Timeout wird der Ball
            freigegeben. Wenn Team A seine Offense Formation vervollständigt
            hat, muss Team B seine Spieler sofort positionieren. Team B erhält
            Zeit, seine Ersatzspieler in Position zu bringen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Jedes der Teams kann sich einer Spielverzögerung schuldig
                machen. Team B, wenn es nicht sofort seine Ersatzspieler
                einwechselt (Regel 3.4.2.b.3) oder Team A, wenn es den
                25-Sekunden-Countdown überzieht. Strafe – 5 Meter vom
                Succeeding Spot.
            </p>
        </details>
    </div>
</article>
