src/snapshots/afrotd__parser__tests__interpreation_html_3.5.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-35. Es befinden sich 12 Team B Spieler in der
            Formation auf dem Feld und keiner dieser Spieler versucht, das Feld
            zu verlassen, während der Ball spielbereit ist. Team A snappt und
            A44 erzielt 3 Meter Raumgewinn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul. Team A, 1. und 10 von der B-30.
            </p>
        </details>
    </div>
</article>
