src/snapshots/afrotd__parser__tests__interpreation_html_3.5.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-35. Es befinden sich 12 Team B Spieler in der
            Formation auf dem Feld. B44 erkennt, dass er der zwölfte Spieler
            ist und versucht das Feld zu verlassen. Als der Ball gesnappt wird,
            (a) befindet sich B44 noch auf dem Feld, aber sein nächster Schritt
            bringt ihn ins Aus oder (b) B44 berührt die Seitenlinie in dem
            Moment, als der Snap durchgeführt wird. Nach dem Snap erzielt A44 3
            Meter Raumgewinn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                a) Live Ball Foul durch B44, Team A, 1. und 10 von der B-30.
                (b) Kein Foul durch B44, Team A, 4. und 2 von der B-32. Um
                nicht als zwölfter Spieler gezählt zu werden, muss sich B44
                außerhalb des Feldes befinden.
            </p>
        </details>
    </div>
</article>
